syntax = "proto3";
package kira.upgrade;

import "gogoproto/gogo.proto";
import "kira/upgrade/upgrade.proto";

option go_package = "github.com/KiraCore/sekai/INTERX/proto-gen/kira/upgrade";

message Plan {
  string name = 1;
  repeated Resource resources = 2 [ (gogoproto.nullable) = false ];
  int64 upgrade_time = 3;
  string rollback_checksum = 4;
  int64 max_enrolment_duration = 5;
  bool instate_upgrade = 6;
}



